--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   background-color: antiquewhite;
   border-radius:10px;
   padding:0;
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 .link p{
   margin-left:20px;
@@ -98,3 +98,17 @@ body {
   font-size: 1.5em;
 }
 
+.error{
+  width:500px;
+  text-align:center;
+  padding:10px;
+  background-color: rgb(196, 37, 37);
+  border-radius: 20px;
+  color:#fff;
+  margin:10px 0;
+  transition:all 0.8s;
+}
+.errorinput{
+  border-bottom: rgb(196, 37, 37);
+  transition:all 0.8s;
+}
